- Redesign "Sound Events" tab in Preferences
- Ability to replace existing file on upload
- Menu to insert MOTD variables in "Server Properties" dialog
- Support for Import/Export entire Server List
- Optional sound event for user typing private message
- Replace readonly edit fields by statis label in "User info" dialog
- Only show available info in "User info" dialog
- Ability to search by IP or username in "Banned Users" dialog
Android Client
- users who have the "User can make other users channel operator" right will no longer be asked for the operator password for granting/revoking channel operator
iOS Client
-
Server
-

Version 5.16.1, 2024/04/16
Default Qt Client
- Fixed issue where initial sound event was played over and over again

Version 5.16, 2024/04/08
Default Qt Client
- Dates and times are now formatted in user locale on "User accounts" dialog and main window's files tab
- Option to show server's message of the day in a welcome dialog box
- Option to announce server name on some server related TTS events
- Option to show channel topic in channel list
- Don't display server name when disconnected from server where not authentified
- Ask for accessibility settings on Linux at first startup
- Fixed "Gender" property not being saved in .tt files
- Fixed sort by size on file list
- OPUS codec updated to v1.5.1
- Windows and macOS updated to Qt 6.7.0
Android Client
- Admins can upload files to channels they have not joined
- It is now possible to move users to root channel
- Navigating back returns to Channels-tab prior to disconnecting
- Navigating back also displays root channel
- User menu action to grant/revoke channel operator
- Subscriptions for intercepting users
- OPUS codec updated to v1.5.1
- Fixed crash issue when entering Text-To-Speech settings
- Fixed crash issue when updating text messages
iOS Client
- OPUS codec updated to v1.5.1
Server
-

Version 5.15.1, 2023/12/21
Default Qt Client