@@ -137,6 +137,13 @@
      </property>
     </widget>
    </item>
+   <item row="12" column="0">
+    <widget class="QPushButton" name="copyButton">
+     <property name="text">
+      <string>Copy User Information to Clipboard</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
